cmake_minimum_required(VERSION 3.17)
project(Sql_Pri)

set(CMAKE_CXX_STANDARD 11)

add_executable(Sql_Pri test.cpp SelfDefine.h test.cpp Filters/Filter.cpp divde/strfactory.cpp sort/sortData.cpp  test/TestTraverse.cpp Link_List.cpp srceen/srceens.cpp DutyFuns/DutyS.cpp test/demo_expmple.cpp socket_lab/skt_requst.cpp)